<resources>
    <string name="app_name">Assignment3</string>
    <string name="back">back</string>
    <string name="explain">"    "The upper left corner of the game shows how many objects need to be eliminated, and the right shows how many steps need to be eliminated. The fewer steps required, the higher the score. Good luck</string>
    <string name="zla182_amp_jla641"><![CDATA[zla182 & jla641]]></string>
    <string name="citation">Citation</string>
    <string name="about_the_author">About author</string>
    <string name="settings">Settings</string>
    <string name="backtomenue">back menue</string>
    <string name="reset">reset</string>
    <string name="playgame">play game</string>
    <string name="options">options</string>
    <string name="help">help</string>
    <string name="Game_over">finish game</string>
    <string name="found">Found</string>
    <string name="scansused">scansUsed</string>
    <string name="mines">Mines</string>
    <string name="timeplayed">Time Played</string>
    <string name="congratulations">You Win! Congratulations</string>
    <string name="demining_war">Demining war!</string>
    <string name="byzla182_amp_jla641"><![CDATA[By zla182 & jla641]]></string>
    <string name="skip">skip</string>
    <string name="todo">todo</string>
    <string name="rows_and_clumns">\%1$d rows by %2$d columns\</string>
    <string name="Mines_num">\%1$d Mines\</string>
    <string name="NumMines">\%1$d of %2$d mines\</string>
    <string name="Best_score">\Best score is: %1$d\</string>
    <string name="SFU276home">opencoursehub.cs.sfu.ca/jackt/grav-cms/cmpt276-2/home</string>
    <string name="Mine_link">Mine: http://90sheji.com/sucai/13539038.html</string>
    <string name="Welcome_background_link">Welcome\'s background: https://mc.163.com/news/media/20190105/29178_794184.html</string>
    <string name="Game_introduce">Game InFormation</string>
    <string name="Option_background_link">Option\'s background: https://www.bbc.com/ukchina/simp/vert-fut-39734501</string>
    <string name="Help_background_link">Help\'s background: www.pexels.com/photo/background-blur-clean-clear-531880/</string>
    <string name="Boom_sound">Boom\'s sound: http://www.yisell.com/search.htm?w=%E7%88%86%E7%82%B8</string>

    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
</resources>