<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_picture"
    tools:context=".UI.MainActivity">

    <TextView
        android:id="@+id/Game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demining_war"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ImageView
        android:id="@+id/image_mine1"
        android:layout_width="175dp"
        android:layout_height="87dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_mine3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_mine3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/source_mine" />

    <ImageView
        android:id="@+id/image_mine3"
        android:layout_width="175dp"
        android:layout_height="87dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/Game_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Game_name"
        app:layout_constraintTop_toTopOf="@+id/Game_name"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/source_mine" />

    <ImageView
        android:id="@+id/image_mine2"
        android:layout_width="175dp"
        android:layout_height="87dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/Game_name"
        app:layout_constraintEnd_toStartOf="@+id/Game_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Game_name"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/source_mine" />

    <LinearLayout
        android:id="@+id/Main_control"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Game_name"
        app:layout_constraintVertical_bias="0.012">

        <Button
            android:id="@+id/PlayGame"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:backgroundTint="#643232"
            android:backgroundTintMode="src_atop"
            android:text="@string/playgame"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Options"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:backgroundTint="#643232"
            android:backgroundTintMode="src_atop"
            android:text="@string/options"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Help"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:backgroundTint="#643232"
            android:backgroundTintMode="src_atop"
            android:text="@string/help"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Game_over"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#643232"
            android:backgroundTintMode="src_atop"
            android:text="@string/Game_over"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>