<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/option_background"
    tools:context=".UI.ActivityOptions">

    <RadioGroup
        android:id="@+id/Board_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarThumbHorizontal="@color/colorPrimary"
        android:scrollbarThumbVertical="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Settings"
        app:layout_constraintVertical_bias="0.100000024"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Settings"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <RadioGroup
        android:id="@+id/Number_mines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarThumbHorizontal="@color/colorPrimary"
        android:scrollbarThumbVertical="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/Board_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/Board_size"
        app:layout_constraintTop_toTopOf="@+id/Board_size"
        app:layout_constraintVertical_bias="0.19"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number_mines" />

    <Button
        android:id="@+id/BackToMain"
        android:layout_width="172dp"
        android:layout_height="59dp"
        android:text="@string/backtomenue"
        android:textColor="#121212"
        app:layout_constraintBottom_toBottomOf="@+id/Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Reset"
        app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>